TEST_PROGRAMS/INVALID/shabbir_hussain/prog7.min
var z: string; var t: string;

z = h = r = 3;

